@@ -1,3 +1,8 @@
+2002-12-29  Wakaba  <w@suika.fam.cx>
+
+	* EncodedWord.pm (decode): Refine.
+	* Charset.pm (is_utf8): New.
+
 2002-12-28  Wakaba  <w@suika.fam.cx>
 
 	* Charset.pm (name_minimumizer): Third argument, $option is added.
