@@ -1,3 +1,8 @@
+2002-12-29  Wakaba  <w@suika.fam.cx>
+
+	* Encode.pm (*undef:decode, _decode): Don't pass utf8 string to 
+	Encode::decode.
+
 2002-09-11  Wakaba <w@suika.fam.cx>
 
 	* Jcode.pm (jcode.pl): Convert fullwidth to halfwidth
