@@ -1,3 +1,9 @@
+2002-12-29  Wakaba  <w@suika.fam.cx>
+
+	* Token.pm (de_quoted_string, de_phrase): New.
+	(to_quoted_string, to_phrase): Removed.
+	(en_quoted_string, en_phrase): New.
+
 2002-12-28  Wakaba  <w@suika.fam.cx>
 
 	* UA.pm (replace_system_version): 'WindowsNT' is changed to 'Windows NT'.
